# percolation

./: .gitignore  Cargo.toml  config.json
percolation/: Cargo.toml  config.json  plot.py
percolation/src/: config.rs  main.rs
src/: main.rs
