[package]
name = "percolation"
version = "0.1.0"
authors = ["Paweł Rubin <pawelrubin19@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
indicatif = { version = "0.16.2", features = ["rayon"] }
console = "0.14.1"
rayon = "1.5.0"
oorandom = "11.1.3"

[profile.dev]
opt-level = 3
