[package]
name = "percolation"
version = "0.1.0"
authors = ["Paweł Rubin <pawelrubin19@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
